--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "engine-munger": "^0.2.0",
     "express": "^4.3.0",
     "kraken-devtools": "^1.0.0",
+    "dustjs-helpers": "~1.6.0",
+    "dustjs-linkedin": "~2.6",
     "kraken-js": "^1.0.1",
     "node-sass": "^3.1.2"
   },
